--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ title                    : "1st Workshop on Evaluating NLG Evaluation"
 title_separator          : "–"
 name                     : "the NLG for HRI Workshop organisers"
 description              : "1st Workshop on Evaluating NLG Evaluation at INLG 2020."
-url                      : "http://evalnlg-workshop.github.io" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : "https://evalnlg-workshop.github.io" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "/" # the subpath of your site, e.g. "/blog"
 repository               : # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
