--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ minimal_mistakes_skin    : "default" # "air", "aqua", "contrast", "dark", "dirt"
 
 # Site Settings
 locale                   : "en-US"
-title                    : "1st Workshop on Evaluating NLG Evaluation (EvalNLGEval)"
+title                    : "EvalNLGEval"
 title_separator          : "–"
 name                     : "the Evaluating NLG Evaluation organisers"
 description              : "1st Workshop on Evaluating NLG Evaluation at INLG 2020."
