background, committee tab, papers tab

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,11 +1,11 @@
 main:
   - title: "Programme"
     url: /programme/
-  - title: "Organisation"
+  - title: "Accepted Papers"
+    url: /accepted-papers/
+  - title: "Committees"
     url: /organisation/
   - title: "Contact"
     url: /contact/
-  - title: "Accepted Papers"
-    url: /accepted-papers/
   - title: "INLG 2020"
     url: https://www.inlg2020.org/
